# Cocos2DX-Final-BattleField

./: .gitignore  CMakeLists.txt  HUONG_DAN_CAI_DAT_THU_VIEN_FMOD.txt
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  MainMenuScene.cpp  MainMenuScene.h  Splash.cpp  Splash.h
Classes/Background/: Background.cpp
Classes/Bullet/: Bullet.cpp  Bullet.h  BulletManager.cpp  BulletManager.h  BulletPlayerGame3.cpp  BulletPlayerGame3.h  BulletPool.cpp  BulletPool.h  BulletPoolPlayerGame3.cpp  BulletPoolPlayerGame3.h
Classes/Button/: ExitButton.cpp  ExitButton.h  PauseButton.cpp  PauseButton.h  ReplayButton.cpp  ReplayButton.h
Classes/Constants/: Constants.cpp  Constants.h
Classes/Controller/: GameController.cpp  GameController.h  PlayerMovement.cpp  PlayerMovement.h  SceneController.cpp  SceneController.h  SoundController.cpp  SoundController.h  SpriteController.cpp  SpriteController.h
Classes/Enemy/: Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  EnemyPool.cpp  FallingTree.cpp  FallingTree.h  FlyingBullet.cpp  FlyingBullet.h  RandomBoom.cpp  RandomBoom.h
Classes/FX/: Explodable.cpp  Explodable.h
Classes/File_Library/: CCLuaStack.cpp  FMODAudioEngine.cpp  FMODAudioEngine.h
Classes/Game1/: Game1Scene.cpp  Game1Scene.cpp~RF4fcdb0.TMP  Game1Scene.cpp~RFfd2eb2.TMP  Game1Scene.h
Classes/Game1/Background/: Background.cpp  Background.h
Classes/Game1/Effect/: EffectObject.cpp
Classes/Game1/Enemy/: EnemyFactory.cpp  EnemyFactory.h  EnemyPool.h  FallingObject.cpp  FallingRock.cpp  FallingRock.h  FallingRockPool.cpp  FallingRockPool.h  FallingTree.cpp  FallingTree.h  FanBullet.cpp  FanBullet.h  FanBulletPool.cpp  FanBulletPool.h  FlyingBullet.cpp  FlyingBullet.h  FlyingBulletPool.cpp  FlyingBulletPool.h  Landmine.cpp  Landmine.h  RandomBoom.cpp  RandomBoom.h  RandomBoomPool.cpp  RandomBoomPool.h  SpawnEvent.h
Classes/Game1/Items/: AmmoItem.cpp  AmmoItem.h  AmmoItemPool.cpp  AmmoItemPool.h  CollectibleItem.cpp  CollectibleItem.h  HealthItem.cpp  HealthItem.h  HealthItemPool.cpp  HealthItemPool.h
Classes/Game1/Player/: HealthPlayerGame1.cpp  PlayerGame1.cpp  PlayerGame1.h
Classes/Game1/Skills/: ShieldSkill.h  ShieldSkillI.cpp  ShieldSkillItem.cpp  ShieldSkillItem.h  ShieldSkillItemPool.cpp  ShieldSkillItemPool.h
Classes/Game2/: Game2Scene.cpp  Game2Scene.h
Classes/Game2/Bullet/: Bullet.cpp  Bullet.h
Classes/Game2/Cursor/: Cursor.cpp  Cursor.h
Classes/Game2/Enemy/: BunkerGame2.cpp  BunkerGame2.h  EnemyBase.cpp  EnemyBase.h  EnemyUtils.cpp  MeleeEnemyGame2.cpp  MeleeEnemyGame2.h  SniperBulletGame2.cpp  SniperBulletGame2.h  SniperEnemyGame2.cpp  SniperEnemyGame2.h  SuicideBomberEnemy.cpp  SuicideBomberEnemy.h
Classes/Game2/Items/: ItemsSpawn.cpp  ItemsSpawn.h
Classes/Game2/Player/: BulletGame2.cpp  BulletGame2.h  Bullet_Petard.h  Cannon.cpp  Cannon.h  Grenade.cpp  Grenade.h  GroundCannonGame2.cpp  GroundCannonGame2.h  HealthBarManager.cpp  Petard.h  PlayerGame2.cpp  PlayerGame2.h
Classes/Game2/gameplay2/: Bullet.cpp
Classes/Game3/: Game3Scene.cpp  Game3Scene.h
Classes/Game3/Background/: Background3.cpp  Background3.h
Classes/Game3/Bullet/: Bullet3.cpp  Bullet3.h
Classes/Game3/Items/: HealthRecoveryItemGame3.cpp  IncreaseBulletCountItemGame3.cpp  ItemBaseGame3.cpp  ItemBaseGame3.h  UpgradeBulletItemGame3.cpp  UpgradeBulletItemGame3.h
Classes/Game3/Player/: CityCollisionArea.cpp  CityCollisionArea.h  PlayerGame3.cpp  PlayerGame3.h
Classes/Game3/enemy/: BoomForEnemyPlane.cpp  BoomForEnemyPlane.h  BoomForEnemyPlanePool.cpp  BulletForEnemyPlane.cpp  EnemyPlan3.cpp  EnemyPlan3.h  EnemyPlane1.cpp  (+18 more)
Classes/Grenade/: BulletGame2.cpp  Grenade.cpp  Grenade.h
Classes/LoadingBar/: CustomLoadingBar.cpp  CustomLoadingBar.h
Classes/Manager/: BackgroundManager.cpp  BackgroundManager.h  Joystick.cpp  Joystick.h  ObjectPoolGame1.cpp  ObjectPoolGame1.h  ObjectPoolGame2.cpp  ObjectPoolGame2.h  ObjectPoolGame3.cpp  ObjectPoolGame3.h  PlayerMovementManager.cpp  PlayerMovementManager.h  PositionManager.cpp  PositionManager.h  TutorialLayer.cpp  TutorialLayer.h
Classes/Panel/: BasePanel.cpp  GameOverPanel.cpp  GameOverPanel.h  PausePanel.cpp  PausePanel.h  SettingPanel.cpp  SettingPanel.h  VictoryPanel.cpp  VictoryPanel.h
Classes/Player/: Player.cpp  Player.h
Classes/PlayerAttributes/: PlayerAttributes.cpp  PlayerAttributes.h
Classes/Scene/: BaseScene.cpp  BaseScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  SceneFinishGame.cpp  SceneFinishGame.h
Classes/UIGame/: Badge.cpp  Badge.h  CollectionWindow.cpp  CollectionWindow.h  IntroScene.cpp  IntroScene.h  LibraryWindow.cpp  LibraryWindow.h
Classes/utils/: AudioUtils.cpp  AudioUtils.h  MathFunction.cpp  MathFunction.h  MusicAnalyzer.cpp  PhysicsShapeCache.cpp  Pool.cpp  Pool.h  Rotator.cpp  Rotator.h  tilemap.cpp  tilemap.h
Resources/: key.jks
Resources/json/: credits_endGame.json  items.json  items_library.json  spawn_boss_game3.json  spawn_boss_game3.json.json  spawn_boss_phase2_game3.json  spawn_enemiesBoom_game3.json  spawn_enemiesBoom_phase2_game3.json  spawn_enemiesBullet_game3.json  spawn_enemiesBullet_phase2_game3.json  spawn_enemies_game1.json  spawn_enemies_game3.json  spawn_enemies_phase2_game3.json
Resources/physicsBody/: BunkerGame2.plist  EnemyFanBullet.plist  EnemyPlaneBoom.plist  EnemyPlaneBoss.plist  EnemyPlaneBullet.plist  FallingRock1.plist  FallingRock2.plist  HealthRecoveryItem.plist  IncreaseBulletCountItem.plist  ItemBullet.plist  ItemHat.plist  MissileForEnemyPlane.plist  Petard.plist  PlayerGame2.plist  PlayerGame3.plist  RandomBoomExplosionGame1.plist  SniperEnemyGame2.plist  SuicideBomberEnemy.plist
Resources/xml/: items_library.xml
proj.android/: build.gradle  gradle.properties
proj.android/app/: build.gradle
proj.win32/: FinalBattleField.vcxproj  FinalBattleField.vcxproj.filters  Petard.cpp  TrainCocos2dx.vcxproj  TrainCocos2dx.vcxproj.filters
win32-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  FinalBattleField.sln  FinalBattleField.vcxproj  FinalBattleField.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
(+53 files in other folders)
